--- a/docs/issues/2024-08.rst
+++ b/docs/issues/2024-08.rst
@@ -7,7 +7,7 @@ Featured
     Deepmind drops another banger.  This time its two reinforcement learning algorithms which, with their powers combined, manage a silver medal at this years International Mathematics Olympiad.  Given that most models in the field struggle with simple problems, this is astounding.  The blog is short and worth a read, but they duct-taped an LLM between the AlphaZero reinforcement learning problem and formal mathematical prover using formal language that could evaluate whether a proof was correct.  It seems like they leveraged that, in the right circumstances, evaluating whether a proof is correct is easy.
 
 `VILA2 : VILA Augmented VILA <https://arxiv.org/pdf/2407.17453>`_
-    A new VLM from NVIDIA.  The model, though, it less interesting than how they train it.  you can run out of labelled quality data pretty fast, so they have a "self-augment" and a "specialist-augment" step to improve data quality and labels.  They also augment with other models.  Cool idea, and a neat way to generate quality data ex nihilo.
+    A new VLM from NVIDIA.  The model, though, is less interesting than how they train it.  you can run out of labelled quality data pretty fast, so they have a "self-augment" and a "specialist-augment" step to improve data quality and labels.  They also augment with other models.  Cool idea, and a neat way to generate quality data ex nihilo.
 
 `Revealing the Dark Secrets of Extremely Large Kernel ConvNets on Robustness <https://arxiv.org/pdf/2407.08972>`_
     ConvNets with extremely large kernels achieve comparable/superior performance compared to vision transformers.  This paper demonstrates this for robustness and investigates why.
@@ -47,7 +47,7 @@ VLMs
     A novel vision LLM which takes a text prompt as an input and segments the relevant objects in a video, possibly with a text description as well.  Looks pretty powerful in a limited number of examples, but code is coming "soon".
 
 `VILA2 : VILA Augmented VILA <https://arxiv.org/pdf/2407.17453>`_
-    A new VLM from NVIDIA.  The model, though, it less interesting than how they train it.  you can run out of labelled quality data pretty fast, so they have a "self-augment" and a "specialist-augment" step to improve data quality and labels.  They also augment with other models.  Cool idea, and a neat way to generate quality data ex nihilo.
+    A new VLM from NVIDIA.  The model, though, is less interesting than how they train it.  you can run out of labelled quality data pretty fast, so they have a "self-augment" and a "specialist-augment" step to improve data quality and labels.  They also augment with other models.  Cool idea, and a neat way to generate quality data ex nihilo.
 
 `Wolf: Captioning Everything with a World Summarization Framework <https://arxiv.org/pdf/2407.18908>`_
     NVIDIA and friends propose a novel VLM whose main focus is on captioning images/videos.  It's a short jump from captioning to identifying objects in BBOXs, so something like this could be slotted into the Grounded SAM/Grounding DINO pipeline.
@@ -65,14 +65,8 @@ Doctrinaire
 
 Autonomy
 --------
-`Spider2-V: How Far Are Multimodal Agents From Automating Data Science and Engineering Workflows? <https://arxiv.org/pdf/2407.10956>`_
-    From Google Deepmind.  Investigates whether automous agents are able to take our jobs yet by introducing a new benchmarking dataset.  The best performing agent gets 14%, so the answer is no.
-
 `Distilling Tiny and Ultra-fast Deep Neural Networks for Autonomous Navigation on Nano-UAVs <https://arxiv.org/pdf/2407.12675>`_
-    Builds a tiny CNN to function as the brain on a "nano-drone".  Lots of potential with a swarm of these things for recon purposes.
-
-`ODYSSEY: Empowering Agents with Open-World Skills <https://arxiv.org/pdf/2407.15325>`_
-    Establishes a framework/dataset for open-world autonomous agents in Minecraft.  Seems fun/silly at first, but might have enough similarities to, e.g., drones flying around looking for things to do to be worth keeping an eye on.
+    Builds a tiny CNN to function as the brain on a "nano-drone".  Lots of potential with a swarm of these things for recon/navigation/obstacle detection purposes.
 
 `SHANGUS: Deep Reinforcement Learning Meets Heuristic Optimization for Speedy Frontier-Based Exploration of Autonomous Vehicles in Unknown Spaces <https://arxiv.org/pdf/2407.18892>`_
     A deep reinforcement learning framework to control an autonomous vehicle exploring an unknown space.  One of the stated applications is space (!) but it's easy to imagine wanting this for recon purposes.
@@ -106,14 +100,9 @@ Gaussian Splatting
 `SpotlessSplats: Ignoring Distractors in 3D Gaussian Splatting <https://arxiv.org/pdf/2406.20055>`_
     From Deepmind.  Proposes a novel Gaussian Splatting method which can effectively ignore interfering objects.  We've noticed on EID that this can lead to weird splats, so ignoring it is quite nice.
 
-`Segment Any 4D Gaussians <https://arxiv.org/pdf/2407.04504>`_
-    Segment Anything for 4D Gaussian splatting.  Looks pretty impressive, but I struggle to think of a use case for 4D Gaussian splatting over 3D.  Maybe I lack imagination.
-
 `Click-Gaussian: Interactive Segmentation to Any 3D Gaussians <https://arxiv.org/pdf/2407.11793>`_
     A 3D Gaussian Splatting renderer/UI that allows the user to segment any object inside the render by clicking on it and adjusting a parameter.  We're using this (or something morally equivalent) for EID and it's pretty cool.
 
-`Generalizable Human Gaussians for Sparse View Synthesi <https://arxiv.org/pdf/2407.12777>`_
-    CMU and Meta develop a novel Gaussian splatting algorithm which can render an entire human using a sparse set (as few as three) pictures.  They do this by leveraging the fact that we know what humans look like, on average, and so can infer a lot from a small number of datapoints in the restricted setting of their problem.
 
 Gotta Go Fast
 -------------
@@ -140,14 +129,8 @@ Gotta Go Fast
 
 Theory
 ------
-`A Theory of Interpretable Approximations <https://arxiv.org/pdf/2406.10529>`_
-    From Google.  Investigates under what circumtsances neural nets can be interpreated with rather simple decision trees.  Develops some bounds for this.  Interesting, but incredibly theoretical.
-
 `The Art of the Steal: Purloining Deep Learning Models Developed for an Ultrasound Scanner to a Competitor Machine <https://arxiv.org/pdf/2407.03512>`_
     If you put a proprietary DL algorithm on a device, anyone with access to the device can recreate, or "steal" the model weights of the original algorithm by using the device to label a bunch of data and training a new algorithm on that data.  This paper proposes a better way to do that which essentially replicates the performance of the original algorithm.
-
-`Analytic Convolutional Layer: A Step To Analytic Neural Network <https://arxiv.org/pdf/2407.06087>`_
-    Presents a new convolutional kernel which is both computationally more efficient in some cases and more interpretable.  I'm not sure this paper really gets there, but it's worth keeping an eye on stuff like this in case interpretable neural nets ever become a thing.
 
 `Revealing the Dark Secrets of Extremely Large Kernel ConvNets on Robustness <https://arxiv.org/pdf/2407.08972>`_
     ConvNets with extremely large kernels achieve comparable/superior performance compared to vision transformers.  This paper demonstrates this for robustness and investigates why.
@@ -157,14 +140,11 @@ Theory
 
 Applications
 ------------
-`A Survey of Distance-Based Vessel Trajectory Clustering: Data Pre-processing, Methodologies, Applications, and Experimental Evaluation <https://arxiv.org/pdf/2407.11084>`_
-    A survey on methods for keeping track of ship trajectories.  Could be useful as a reference for monitoring sea vessels.
-
 `Deformable Convolution Based Road Scene Semantic Segmentation of Fisheye Images in Autonomous Driving <https://arxiv.org/pdf/2407.16647>`_
-    Does ATR with fish-eye camera, finds that a deformable CNN (where the kernel depends on the shape of the object) outperforms the non-deformable version of CNNs such as ResNets and U-Nets.
+    Does ATR with fish-eye camera, finds that a deformable CNN (where the kernel depends on the shape of the object) outperforms the non-deformable version of CNNs such as ResNets and U-Nets.  Do we use any fish-eye cameras?
 
 `GENERATIVE LEARNING FOR SIMULATION OF US ARMY VEHICLE FAULTS <https://arxiv.org/pdf/2407.17654>`_
-    Throws some deep learning methods at the problem of "predicting when US Army vehicles will break down".  Presumably there's some army interest behind this, even if it's not stated explicitly in this paper, because why would you do this otherwise.  Two of the coauthors are at ECE in Duke - might be a collaboration opportunity, might be we know them already
+    Throws some deep learning methods at the problem of "predicting when US Army vehicles will break down".  Presumably there's some army interest behind this, even if it's not stated explicitly in this paper, because why would you do this otherwise.  Two of the coauthors are at ECE in Duke - might be a collaboration opportunity, might be we know them already.  Sponsored by the Air Force in what I can only assume is inter-department shade.
 
 New LLMs
 --------
